# GPicView

./: AUTHORS  Makefile.in  README  README~  aclocal.m4  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  gpicview.desktop  pref-dlg.ui
data/ui/: Makefile.am  Makefile.in  about.glade.in  about.ui
po/: Makefile.in.in
src/: Makefile.am  Makefile.in  about.c  about.h  crop.c  crop.h  exif.c  exif.h  exifdialog.c  exifdialog.h  file-dlgs.c  file-dlgs.h  glib-mem.h  gpicview.c  gpsinfo.c  image-list.c  image-list.h  imlib.c  iptc.c  jhead.c  jhead.h  jpeg-tran.c  jpeg-tran.h  jpegfile.c  layot.c  layot.h  loader.c  loader.h  mainwin.c  mainwin.h  pref.c  pref.h  printing.c  printing.h  ptk-menu.c  ptk-menu.h  screebshot.c  screenshot-dlg.c  screenshot-dlg.h  screenshot.c  (+9 more)
